Fixed font styling, which was broken in several places! Font families tested as well

--- a/app/static/css/scss/base.scss
+++ b/app/static/css/scss/base.scss
@@ -4,9 +4,9 @@ $dark-color: #333333;
 $med-color: #555555;
 $light-color: #999999;
 $orange: #ee7f2d;
-$font-light: "Avenir-Light", "Arial-Light", sans-serif;
-$font-med: "Avenir-Medium", "Arial-Medium", sans-serif;
-$font-heavy: "Avenir-Heavy", "Arial-Heavy", sans-serif;
+$font-light: "Avenir-Light", "Arial Narrow", "Helvetica-Light", sans-serif;
+$font-med: "Avenir-Medium", "Arial", "Helvetica", sans-serif;
+$font-heavy: "Avenir-Heavy", "Arial Black", "Helvetica-Bold", sans-serif;
 /* rgb values for primary-color */
 $primary-color-r: 29;
 $primary-color-g: 158;
@@ -17,20 +17,20 @@ html, body {
 	// Font Style
 
 	// Base font
-	font-family: 100% $font-med;
+	font-family: $font-med;
 	// Headers
 	.h1, h1 {
-		font-family: 100% $font-heavy;
+		font-family: $font-heavy;
 		font-size:36px;
 	}
 
 	.h2, h2 {
-		font-family: 100% $font-heavy;
+		font-family: $font-heavy;
 		font-size:26px;
 	}
 
 	.h3, h3 {
-		font-family: 100% $font-med;
+		font-family: $font-med;
 		font-size:20px;
 	}
 
@@ -51,7 +51,7 @@ html, body {
 		background-color: $primary-color;
 	}
 	.nav-link {
-		font: 100% $font-med;
+		font-family: $font-med;
 		font-size:24px;
 	}
 
@@ -82,7 +82,7 @@ html, body {
  		color: #c9302c;
  	}
  }
-  
+
 ::placeholder {
 	color: $light-color !important;
 	opacity: 1;
@@ -100,7 +100,7 @@ html, body {
 
 #searches-wrapper {
 	min-height: 75px;
-	border-top: 5px solid $med-color;	
+	border-top: 5px solid $med-color;
 	position: relative;
 
 	.centered{
@@ -159,7 +159,7 @@ html, body {
     white-space: nowrap;
     min-height: 4.25vh;
     float:left;
-    font: 100% $font-light;
+    font-family: $font-light;
 	font-size: 14px !important;
 }
 
@@ -168,8 +168,8 @@ html, body {
 }
 
 .searchButtons {
-	display: flex; 
-	flex-wrap: nowrap; 
+	display: flex;
+	flex-wrap: nowrap;
 	margin-right: 2vh;
 }
 
@@ -267,11 +267,11 @@ html, body {
 			&:hover {
 				color: rgba(255, 165, 0, 0.5);
 			}
-			.resultFireNum {
-				color: $dark-color !important;
-				font-size: 0.85em;
-				font-weight: bold;
-			}
+		}
+		.resultFireNum {
+			color: $dark-color !important;
+			font-size: 0.85em;
+			font-weight: bold;
 		}
 	}
 }
@@ -366,7 +366,7 @@ html, body {
 	.calendar-btn {
 		text-decoration: none !important;
   	}
-  
+
 	.reportBtn {
 		font-size: 1.5em;
 		cursor: pointer;
@@ -477,7 +477,7 @@ html, body {
 			color:$primary-color;
 		}
 	}
-	
+
 }
 
 #welcome {
@@ -488,9 +488,8 @@ html, body {
 }
 
 #trendingLabel {
-	text-align:center; 
-	font-size:24px; 
-	color:darkorange; 
+	text-align:center;
+	font-size:24px;
+	color:darkorange;
 	font-weight:bold;
 }
-
